import "client.comm.proto";
package client;

message promo_list_of_names_req {
    required uint32      type     = 1;     // 榜单类型 0战力 1等级 ..... 与排行榜一致
    optional server_head svr_head = 1000;
}

message promo_list_of_names {
    required uint32 role_id = 1; 
    required uint32 reward  = 2; // 非0为已领取过奖励
}

message promo_list_of_names_rsp {
    required uint32              type  = 1; 
    repeated promo_list_of_names roles = 2; // 获奖角色Id 有序 第1, 第2 ....
}

// 查询此服务器开服时间
message open_server_time_req {
    required uint32      unixtime = 1;
    optional server_head svr_head = 1000;
}

message open_server_time_rsp {
    required uint32 unixtime = 1; // 已开服天数
}

//////// server ////////

// 服务端验证数据 客户端不需要
message check_list_of_names_req {
    required uint32 type      = 1; 
    required uint32 role_id   = 2;
    required uint32 rank      = 3;
    required uint32 reward    = 4;
    optional uint32 family_id = 5;
}

message check_list_of_names_rsp {
    required uint32 type    = 1;
    required uint32 role_id = 2;
    required uint32 rank    = 3;
    required uint32 reward  = 4;
    required bool   check   = 5;
}